--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   --background: #ffffff;
   --foreground: hsl(278, 68%, 11%);
   --font-sans: var(--font-space-grotesk);
+  --secondary: hsl(279, 6%, 55%);
+  --light: hsl(270, 3%, 87%);
 }
 
 @layer base {
@@ -20,14 +22,16 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-space-grotesk);
+  --color-secondary: var(--secondary);
+  --color-light: var(--light);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: hsl(270, 3%, 87%);
   }
-}
+} */
 
 body {
   background: var(--background);
